--- a/artclub.html
+++ b/artclub.html
@@ -46,24 +46,34 @@
                     <div class="user-wrapper__menu popup-wrapper">
                         <ul class="user-wrapper__list">
                             <li class="user-wrapper__item">
-                                <button class="user-wrapper__btn">
+                                <a class="user-wrapper__btn" href="login.html">
                                        <span class="user-wrapper__icon">
                                         <i class="fas fa-sign-in-alt"></i>
                                         </span>
                                         <span class="user-wrapper__text">
                                         Вход
                                         </span>
-                                </button>
+                                </a>
                             </li>
                             <li class="user-wrapper__item">
-                                <button class="user-wrapper__btn">
+                                <a class="user-wrapper__btn" href="register.html">
                                     <span class="user-wrapper__icon">
                                         <i class="fas fa-user-plus"></i>
                                     </span>
                                     <span class="user-wrapper__text">
                                         Регистрация
                                     </span>
-                                </button>
+                                </a>
+                            </li>
+                            <li class="user-wrapper__item">
+                                <a href="profile.html" class="user-wrapper__btn">
+                                    <span class="user-wrapper__icon">
+                                        <i class="fas fa-user"></i>
+                                    </span>
+                                    <span class="user-wrapper__text">
+                                        Профиль
+                                    </span>
+                                </a>
                             </li>
                         </ul>
                     </div>
