--- a/authorsNR.html
+++ b/authorsNR.html
@@ -199,11 +199,11 @@
         <section class="arts">
             <hgroup class="arts__title-wrapper">
                 <h1 class="arts__title">
-                    Русские и советские художники
+                    Иностранные художники
     
                 </h1>
                 <p class="arts__subtitle">
-                    Russian and soviet painters
+                    Foreign artists
                 </p>
         </hgroup>
         <div class="arts__wrapper">
