--- a/profileartist.html
+++ b/profileartist.html
@@ -13,7 +13,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
    <script type="text/javascript" src="assets/libs/jquery.lazy-master/jquery.lazy.min.js"></script>
    <script src="https://kit.fontawesome.com/cb18628afa.js" crossorigin="anonymous"></script>
-   <title>Галемир - Профиль</title>   <link rel="stylesheet" href="assets/css/profile.min.css"></head>
+   <title>Галемир - Художник</title>   <link rel="stylesheet" href="assets/css/artist.min.css"></head>
 <body>
     <div class="preloader">
         <div class="preloader__wrapper preloader__item">
@@ -195,209 +195,7 @@
             
            
         </ul>
-    </aside>    <main class="main-container">
-        <section class="profile">
-            <div class="profile__card">
-                <img src="assets/images/shuntr.jpg" alt="" class="profile__user-img">
-                <h2 class="profile__user-info">
-                    <span class="profile__name">
-                        Рахлицкий Дмитрий
-                    </span>
-                    <span class="profile__nick">
-                        SHUNTR
-                    </span>
-                </h2>
-                <button class="profile__btn">Добавить картину</button>
-            </div>
-            <div class="profile__arts">
-                <h2 class="profile__title">
-                    Картины
-                </h2>
-                <div class="profile__wrapper">
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" alt="assets/images/lazy.png" data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" data-src="assets/images/artist/RU/293798828.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/382595825.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/457852172.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/618139933.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/713881096.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/720150756.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/763601684.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/790655517.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/881320190.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/991114206.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1489114686.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1943894215.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" alt="assets/images/lazy.png" data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" data-src="assets/images/artist/RU/293798828.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/382595825.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/457852172.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/618139933.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/713881096.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/720150756.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/763601684.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/790655517.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/881320190.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/991114206.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1489114686.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1943894215.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" alt="assets/images/lazy.png" data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" data-src="assets/images/artist/RU/293798828.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/382595825.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/457852172.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/618139933.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/713881096.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/720150756.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/763601684.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/790655517.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/881320190.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/991114206.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1489114686.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1943894215.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" alt="assets/images/lazy.png" data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'" data-src="assets/images/artist/RU/293798828.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/382595825.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/457852172.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/618139933.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/713881096.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/720150756.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/763601684.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/790655517.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/881320190.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/991114206.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1188778130.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1489114686.jpg.webp">
-                    </a>
-                    <a href="" class="profile__item">
-                        <img alt="" class="lazy profile__img"   onError="this.src='assets/images/lazy.png'"data-src="assets/images/artist/RU/1943894215.jpg.webp">
-                    </a>
-                </div>
-            </div>
-        </section>
-    </main>
+    </aside>    
     <footer class="main-footer">
         <div class="main-footer__head">
             <span class="main-footer__title">
