--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
                     Ваше имя: любые буквы, цифры и символы. Взрослые пишут здесь свои реальное имя и фамилию, но мы не настаиваем.
                 </p>
                 <div class="autorize__text-wrapper">
-                    <input type="text" class="autorize__input">
+                    <input type="text" class="autorize__input" oninput="InputCheck()">
                     <span class="autorize__placeholder">Имя</span>
                     <span class="autorize__line"></span>
                 </div>
