--- a/museum.html
+++ b/museum.html
@@ -15,27 +15,33 @@
    <script src="https://kit.fontawesome.com/cb18628afa.js" crossorigin="anonymous"></script>
    <title>Галемир - Музеи Мира</title>   <link rel="stylesheet" href="assets/css/museum.min.css"></head>
 <body>
+    <div class="preloader">
+        <div class="preloader__wrapper preloader__item">
+            <div class="preloader__item">
+                <div class="preloader__item">
+                    <div class="preloader__item">
+                        <div class="preloader__item">
+                            <div class="preloader__item">
+                                <div class="preloader__item"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="main-header">
             <a class="main-header__item main-header__logo-wrapper" href="index.html">
                     <img src="assets/images/icons/logo__icon.svg" alt="" class="main-header__logo icon">
                     <img src="assets/images/icons/logo.svg" alt="" class="main-header__logo">
             </a>
             <div class="main-header__item">
-                <div class="main-header__seacrh-wrapper seacrh-wrapper">
-                    <input class="seacrh-wrapper__search-input" type="text" placeholder="Поиск по сайту | Введите слово и нажмите Enter ↵">
-                    <button class="search-wrapper__btn" type="button" onclick="CloseSearchPanel()">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
                 <div class="main-header__btns-wrapper">
                     <button class="main-header__btn" type="button" onclick="ChangeAsideMenu()">
                         <i class="fa-solid fa-grip-lines"></i>
                     </button>
                     <button class="main-header__btn" type="button" onclick="EnableFullScreen()">
                         <i class="fa-solid fa-expand"></i>
-                    </button>
-                    <button class="main-header__btn main-header__btn_glowing" type="button" onclick="ShowSearchPanel()">
-                        <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
                 <div class="main-header__user-wrapper user-wrapper">
@@ -97,43 +103,18 @@
                            <i class="fas fa-chevron-down"></i>
                         </button>
                         <ul class="site-menu__sublist sublist">
-                            <li class="sublist__item">
-                                <a href="" class="sublist__link">
-                                     Картинная галерея
-                                </a>
-                            </li>
                             <li class="sublist__item">  
-                                <a href="" class="sublist__link">
+                                <a href="artist.html" class="sublist__link">
                                 Художники
                                 </a>
                             </li>
-                            <li class="sublist__item">  
-                                <a href="museum.html" class="sublist__link">
-                                Музеи Мира
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="site-menu__list">
-                    <li class="site-menu__list-item">
-                        <button class="site-menu__btn" type="button" onclick="NavMenuChanger(event)">
-                            <span class="site-menu__icon">
-                                <i class="fas fa-book"></i>
-                            </span>
-                            <span class="site-menu__text">
-                                Чтение
-                            </span>
-                           <i class="fas fa-chevron-down"></i>
-                        </button>
-                        <ul class="site-menu__sublist sublist">
                             <li class="sublist__item">
                                 <a href="authors.html" class="sublist__link">
                                      Русские Художники
                                 </a>
                             </li>
                             <li class="sublist__item">  
-                                <a href="" class="sublist__link">
+                                <a href="authorsNR.html" class="sublist__link">
                                     Иностранные Художники
                                 </a>
                             </li>
@@ -210,36 +191,6 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="site-menu__list">
-                    <li class="site-menu__list-item">
-                        <button class="site-menu__btn" type="button" onclick="NavMenuChanger(event)">
-                            <span class="site-menu__icon">
-                                <i class="fas fa-users"></i>
-                            </span>
-                            <span class="site-menu__text">
-                                Сообщество
-                            </span>
-                           <i class="fas fa-chevron-down"></i>
-                        </button>
-                        <ul class="site-menu__sublist sublist">
-                            <li class="sublist__item">
-                                <a href="" class="sublist__link">
-                                     Русские Художники
-                                </a>
-                            </li>
-                            <li class="sublist__item">  
-                                <a href="" class="sublist__link">
-                                    Иностранные Художники
-                                </a>
-                            </li>
-                            <li class="sublist__item">  
-                                <a href="museum.html" class="sublist__link">
-                                Музеи Мира
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
             </li>
             
            
@@ -265,7 +216,7 @@
                         </span>
                     </h2>
                     <div class="country-museums__wrapper">
-                        <a href="" class="country-museums__item">
+                        <a href="museumpage.html" class="country-museums__item">
                             <img data-src="assets/images/museums/italia/vatikan.jpg" alt="" class="country-museums__img lazy">
                             <div class="country-museums__info">
                                 <span class="country-museums__count">
