--- a/artclub.html
+++ b/artclub.html
@@ -81,6 +81,16 @@
                                     </span>
                                 </a>
                             </li>
+                            <li class="user-wrapper__item">
+                                <a href="?exit=go" class="user-wrapper__btn">
+                                    <span class="user-wrapper__icon">
+                                        <i class="fa-solid fa-door-open"></i>
+                                    </span>
+                                    <span class="user-wrapper__text">
+                                        Выйти
+                                    </span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
